Details
-
Bug
-
Resolution: Fixed
-
Major
Description
VBox 4.3.12 NIC: [AMD] 79c970 [PCnet32 LANCE]
I have not experienced this yet with earlier ReactOS releases, like 0.4.11.
But sometimes using the carrier releaser gcc dbg linux build of
0.4.12-RC-28-g4c1b17e, I experience the following symptoms right after 3rd stage bootup:
- no network icon in systray
- devman displays an error on the NIC "Code 31"
- ping www.google.de is not possible
- ping 8.8.8.8 is not possible
- rebooting does not help to solve the issue
0.4.12-RC-28-g4c1b17e__noNET.png
0.4.12-RC-28-g4c1b17e__noNET.log
I even had cases, where the problem persisted even after a completely fresh installation with that same ros iso.
Sometimes after a fresh installation of that very same iso, everything is fine though:
0.4.12-RC-28-g4c1b17e__ok.png![]()
0.4.12-RC-28-g4c1b17e__ok.log![]()
I do know for sure, that it affects gcc4.7.2 linux builds, gcc 8.4.0 linux builds and gcc4.7.2 windows builds, and gcc 8.4.0 windows builds.
Regression test for this sporadic issue:
(
) reactos-bootcd-0.4.12-dev-8-g958ae44-x86-gcc-lin-dbg.iso did not expose the issue a single time for 20 install attempts
(
) reactos-bootcd-0.4.12-dev-67-gf369ae6-x86-gcc-lin-dbg.iso did not expose the issue a single time for 20 install attempts
(
) reactos-bootcd-0.4.12-dev-71-g745fa54-x86-gcc-lin-dbg.iso did not expose the issue a single time for 20 install attempts
reactos-bootcd-0.4.12-dev-72-g043a98d-x86-gcc-lin-dbg.iso_affected.png
(got it on 10th install attempt) is guilty
reactos-bootcd-0.4.12-dev-85-gbc00ea2-x86-gcc-lin-dbg.iso_affected.png
(got it on 6th install attempt)
reactos-bootcd-0.4.12-dev-97-g6940d9f-x86-gcc-lin-dbg.iso_affected.png
(got it on 2nd install attempt)
reactos-bootcd-0.4.12-dev-98-gc8f216e-x86-gcc-lin-dbg.iso_affected.png
(got it on 1st install attempt)
reactos-bootcd-0.4.12-dev-116-g6d47eab-x86-gcc-lin-dbg.iso_affected.png
(got it on 8th install attempt)
reactos-bootcd-0.4.12-dev-121-g3ec7b16-x86-gcc-lin-dbg.iso_affected.png
(got it on first install attempt)
reactos-bootcd-0.4.12-dev-126-g4f8b041-x86-gcc-lin-dbg.iso_affected.png
(got it on 2nd install attempt)
reactos-bootcd-0.4.12-dev-135-g5629743-x86-gcc-lin-dbg.iso_affected.png
(got it at third install attempt)
0.4.12-dev-150-g4d1f13c-x86-gcc-lin-dbg_affected.png
(got it at 4th install attempt)
Newest revision that is known to be affected: reactos-bootcd-0.4.15-dev-470-g9d2ecd3-x86-gcc-lin-dbg.iso (from iso.reactos.org), and selfbuilt gcc 8.4.0 win 0.4.15-dev-1050-gc8e1460.
Attachments
Issue Links
- relates to
-
CORE-16554 iomgr sporadically complains about DvDWriteNow DwUdf AddDevice Routine
-
- Open
-
-
CORE-8340 Intel PRO/100 VE Network Connection network adapter drivers are disabled (Code 31).
-
- Resolved
-
-
CORE-9475 After multiple boots audio (AC97) stops working, complains about \Driver\SYSAUDIO AddDevice method
-
- Resolved
-